# mobile-app-for-vehicle-speed-detection

./: .gitignore  example_metric_grid_video.py  pyproject.toml  test_yolo_with_metric_grid.py
app/pub-yolo-android/: local.properties
app/pub-yolo-android/app/src/main/java/org/tensorflow/lite/examples/objectdetection/: ObjectDetectorHelper.kt  OverlayView.kt
app/pub-yolo-android/app/src/main/java/org/tensorflow/lite/examples/objectdetection/detectors/: CameraCalibrationTransformer.kt  ObjectDetector.kt  SimpleTracker.kt  TaskVisionDetector.kt  YoloDetector.kt
app/pub-yolo-android/app/src/main/java/org/tensorflow/lite/examples/objectdetection/fragments/: CameraFragment.kt
app/pub-yolo-android/app/src/main/res/layout/: activity_main.xml
app/pub-yolo-android/app/src/main/res/values/: dimens.xml
app/pub-yolo-android/gradle/wrapper/: gradle-wrapper.properties
marius_test/RealSpeed/: examples.py  requirements.txt  vehicle_speed_tracker.py
marius_test/RealSpeed2/: depth_speed_tracker.py  requirements.txt
