[project]
name = "mobile-app-for-vehicle-speed-detection"
version = "0.1.0"
description = "Mobile app for vehicle speed detection"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.0.0",
    "opencv-python>=4.10.0",
    "pillow>=11.0.0",
    "ultralytics>=8.0.0",
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "timm>=0.9.0",
]
